--- a/templates/admin.html
+++ b/templates/admin.html
@@ -4,7 +4,7 @@
 <div class="container-fluid mt-4">
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>Admin Panel</h1>
-        <a href="{{ url_for('main.logout') }}" class="btn btn-outline-danger">Logout</a>
+        <!-- Removed the extra logout button from here -->
     </div>
 
     <div class="row">
